# TTTA

./: .gitignore  CLAUDE.md  TASKS.md
.claude/: settings.json
Idea/: 20260719-KienTrucMicroservices.md  Foundation.md  README.md  UpdateFoundation.md
docs/dev-team-roles/: PROGRESS.md
docs/dev-team-roles/tasks/: F3-ba.md  F3-devops.md  F3-frontend.md  F3-pm.md  F3-qa.md  F3-ux.md  F4-ba.md  F4-backend.md  F4-dba.md  F4-devops.md  F4-frontend.md  F4-pm.md  F4-qa.md  F4-ux.md  F5-ba.md  F5-backend.md  F5-frontend.md  F5-pm.md  F5-qa.md  F5-ux.md  F6-ba.md  (+12 more)
infra/: .env.example  Caddyfile  docker-compose.yml
services/core-api/: Dockerfile  package-lock.json  package.json
services/dashboard/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
services/grading-worker/: .dockerignore  Dockerfile  pyproject.toml
services/grading-worker/src/grading_worker/: config.py  contracts.py  core_api_client.py  main.py  pipeline.py  pricing.py  rabbit_consumer.py
services/grading-worker/src/grading_worker/grading/: prompt.py  schema.py
services/grading-worker/src/grading_worker/grading/providers/: base.py  factory.py  gemini.py  openai_provider.py
services/grading-worker/src/grading_worker/media/: downloader.py  ffmpeg.py
services/grading-worker/tests/: test_config.py  test_downloader.py  test_factory.py  test_ffmpeg.py  test_pipeline.py  test_pricing.py  test_prompt.py  test_rabbit_consumer.py  test_schema.py
services/zalo-gateway/: Dockerfile  package-lock.json  package.json  tsconfig.json
(+171 files in other folders)
