[project]
name = "grading-worker"
version = "0.1.0"
description = "ILM bot - grading-worker: consumes submissions, grades via LLM (Gemini/OpenAI), writes results through core-api"
requires-python = ">=3.11"
dependencies = [
  "aio-pika>=9.4",
  "httpx>=0.27",
  "redis>=5.0",
  "google-genai>=0.7",
  "openai>=1.50",
  "jsonschema>=4.23",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grading_worker"]
